// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creating a Divider instance for size inherit 1`] = `
<div
  className="ui-divider divider inherit"
  style={
    Object {
      "height": "8px",
      "width": "8px",
    }
  }
/>
`;

exports[`Test creating a Divider instance for size large 1`] = `
<div
  className="ui-divider divider large"
  style={
    Object {
      "height": "12px",
      "width": "12px",
    }
  }
/>
`;

exports[`Test creating a Divider instance for size medium 1`] = `
<div
  className="ui-divider divider medium"
  style={
    Object {
      "height": "8px",
      "width": "8px",
    }
  }
/>
`;

exports[`Test creating a Divider instance for size normal 1`] = `
<div
  className="ui-divider divider normal"
  style={
    Object {
      "height": "8px",
      "width": "8px",
    }
  }
/>
`;

exports[`Test creating a Divider instance for size small 1`] = `
<div
  className="ui-divider divider small"
  style={
    Object {
      "height": "6px",
      "width": "6px",
    }
  }
/>
`;

exports[`Test creating a Divider instance for size xlarge 1`] = `
<div
  className="ui-divider divider xlarge"
  style={
    Object {
      "height": "16px",
      "width": "16px",
    }
  }
/>
`;

exports[`Test creating a Divider instance for size xsmall 1`] = `
<div
  className="ui-divider divider xsmall"
  style={
    Object {
      "height": "4px",
      "width": "4px",
    }
  }
/>
`;

exports[`Test creating a Divider instance for size xxlarge 1`] = `
<div
  className="ui-divider divider xxlarge"
  style={
    Object {
      "height": "24px",
      "width": "24px",
    }
  }
/>
`;

exports[`Test creating a Divider instance for size xxsmall 1`] = `
<div
  className="ui-divider divider xxsmall"
  style={
    Object {
      "height": "3px",
      "width": "3px",
    }
  }
/>
`;

exports[`Test retrieval of Divider props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": false,
  "visible": true,
  "width": "",
}
`;
